--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-Login==0.6.3
-Werkzeug==2.3.7
-PyPDF2==3.0.1
-python-docx==0.8.11
-sentence-transformers==2.2.2
-scikit-learn==1.3.0
-numpy==1.24.3
-psycopg2-binary==2.9.7
-gunicorn==21.2.0
+Flask>=2.3.0
+Flask-SQLAlchemy>=3.0.0
+Flask-Login>=0.6.0
+Werkzeug>=2.3.0
+PyPDF2>=3.0.0
+python-docx>=0.8.11
+sentence-transformers>=2.2.0
+scikit-learn>=1.3.0
+numpy>=1.24.0
+tensorflow>=2.13.0
+psycopg2-binary>=2.9.0
+gunicorn>=21.0.0
+setuptools>=65.0.0
