--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-# Railway will automatically provide DATABASE_URL for PostgreSQL
-# You can also set these manually in Railway dashboard
+# Render will automatically provide DATABASE_URL for PostgreSQL
+# Set these in Render dashboard under Environment Variables
 
-# Optional: Custom secret key (Railway can auto-generate)
+# Optional: Custom secret key
 SECRET_KEY=GSL_2025_Geo$mart_Learn!ng_Pl@tf0rm_S3cur3_K3y_#Tr0phy_Winner$_Geography_M@ster_AI_P0w3r3d
 
-# Railway sets PORT automatically - this is just for reference
-# PORT=5000
+# Render sets PORT automatically - this is just for reference
+# PORT=10000
 
-# Railway environment
-RAILWAY_ENVIRONMENT_NAME=production
+# Render environment detection
+RENDER=true
