--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ PyPDF2>=3.0.0
 python-docx>=0.8.11
 sentence-transformers>=2.2.0
 scikit-learn>=1.3.0
-numpy>=1.24.0,<2.0.0
-tensorflow>=2.15.0
+numpy>=1.24.0
+tensorflow>=2.13.0
 psycopg2-binary>=2.9.0
 gunicorn>=21.0.0
 setuptools>=65.0.0
